--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -4,7 +4,7 @@
     "designResolution": {
       "width": 750,
       "height": 1334,
-      "fitHeight": true
+      "fitHeight": false
     }
   }
 }
